# merchandizing-optimizer

./: .gitignore  .vercelignore  ASSORTMENT_OPTIMIZER_MICROSERVICE_PLAN.md  DATA-UPLOAD-STRUCTURE.md  SESSION_PROMPTS_11_TO_15.md  SESSION_PROMPTS_16_TO_20.md  SESSION_PROMPTS_1_TO_5.md  SETUP_GUIDE.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/(inventory)/: layout.tsx
app/styles/: aggrid.css
assortment-optimizer-main/: .gitignore  README.md  app.py  requirements.txt
assortment-optimizer-main/.streamlit/: config.toml
assortment-optimizer-main/components/: __init__.py  cdt_analysis.py  clustering.py  dashboard.py  optimization.py  planogram.py  simulation.py
assortment-optimizer-main/data/: __init__.py  generator.py
assortment-optimizer-main/models/: __init__.py  clustering.py  demand.py  optimizer.py  simulation.py
assortment-optimizer-main/utils/: __init__.py  (+1 more)
assortment-optimizer-service/: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
assortment-optimizer-service/.github/workflows/: ci.yml  deploy.yml
assortment-optimizer-service/app/: __init__.py  config.py  dependencies.py  main.py
assortment-optimizer-service/app/api/v1/: router.py
assortment-optimizer-service/app/api/v1/endpoints/: auth.py  clustering.py  data.py  demand.py  health.py  optimization.py  simulation.py
assortment-optimizer-service/app/core/: auth.py  cache.py  exceptions.py  logging.py  metrics.py  security.py  sentry.py
assortment-optimizer-service/app/db/: __init__.py  database.py  models.py  repository.py
assortment-optimizer-service/app/models/: __init__.py
assortment-optimizer-service/app/schemas/: __init__.py  clustering.py  common.py  optimization.py  product.py  sale.py  simulation.py  store.py
assortment-optimizer-service/app/services/: clustering.py  data_generator.py  demand_model.py  optimizer.py  simulation.py
assortment-optimizer-service/app/utils/: __init__.py  data_validator.py  file_parser.py  transformers.py
assortment-optimizer-service/data/samples/: products_sample.csv  sales_sample.csv  stores_sample.csv
assortment-optimizer-service/docs/runbooks/: deployment.md  incident-response.md
assortment-optimizer-service/migrations/: README  env.py
assortment-optimizer-service/migrations/versions/: 20240101_000000_001_initial_schema.py  20240126_000000_002_performance_indexes.py
assortment-optimizer-service/monitoring/alertmanager/: alertmanager.yml
assortment-optimizer-service/monitoring/grafana/dashboards/: assortment-optimizer.json
assortment-optimizer-service/monitoring/grafana/provisioning/dashboards/: dashboards.yml
assortment-optimizer-service/monitoring/grafana/provisioning/datasources/: datasources.yml
assortment-optimizer-service/monitoring/prometheus/: alerts.yml  prometheus.yml
assortment-optimizer-service/nginx/: nginx.conf
assortment-optimizer-service/scripts/: __init__.py  cli.py  entrypoint.sh  init-db.sql
assortment-optimizer-service/tests/: conftest.py  factories.py
assortment-optimizer-service/tests/benchmarks/: __init__.py  benchmark_optimization.py  benchmark_simulation.py
assortment-optimizer-service/tests/integration/: test_auth_flow.py  test_clustering_endpoints.py  test_data_endpoints.py  test_demand_endpoints.py  test_full_workflow.py  test_optimization_endpoints.py  test_performance.py  test_simulation_endpoints.py
assortment-optimizer-service/tests/unit/: test_clustering.py  test_data_generator.py  test_data_validator.py  test_demand_model.py  test_file_parser.py  test_health.py  test_optimizer.py  test_simulation.py  test_transformers.py
components/: CardLayout.jsx  HeaderBlue.tsx  MapComponents.tsx  date-picker.tsx  icon-tooltip.tsx  mega-dropdown-categories.tsx
db/: drizzle.ts  newtable.ts  schema.ts
e2e/: dashboard.spec.ts  fixtures.ts
hooks/: use-click-outside.ts  use-enter-submit.tsx
lib/: hono.ts  initial-data.ts  types.ts  utils.ts
merchandizing/: .eslintignore  .eslintrc.json  .gitignore  DATA-UPLOAD-STRUCTURE.md  SESSION_PROMPTS_11_TO_15.md  SESSION_PROMPTS_6_TO_10.md  playwright.config.ts  tailwind.config.ts  tsconfig.json
providers/: query-provider.tsx  sheet-provider.tsx
scripts/: migrate.ts
tests/: setup.ts
(+1141 files in other folders)
